sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1j/errors.dfrouter
Error: Attribute 'lane' in definition of detector_definition 'MQ11Fs2' is empty.
Quitting (on error).
